--- a/index.html
+++ b/index.html
@@ -62,21 +62,17 @@
                 </div>
             </div>
             <div>
-                <div class="p-3">
-                    
-                </div>
-
-
                 <div class="d-flex flex-row flex-wrap justify-content-center align-items-center p-5 bg-white">
                     <input type="text" class="form-control" placeholder="Type here what you're looking for." v-model="text">
                     {{categoriesFilter}}
-                    <div v-for="category of categories" class="form-check">
+                    <div v-for="category of categories" class="form-check mt-3">
                         <input class="form-check-input mx-2" type="checkbox" role="switch" :id="category"
                             :value="category" v-model="categoriesFiltered">
                         <label class="form-check-label" :for="category">{{category}}</label>
                     </div>
                 </div>
-                <div class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3" id="cards_box">
+                <div class="container-fluid d-flex justify-content-center flex-wrap p-3 gap-3 mt-3" id="cards_box">
+                    <h3 v-if="eventsFiltered.length==0" class="my-5 text-white">Sorry, we couldn't find what you're looking for</h3>
                     <div v-for="event of eventsFiltered" class="card m-2" style="width: 24rem;">
                         <div class="image_container">
                             <img :src="event.image" class="card-img-top" alt="event_image">
