se implementó la creación de tarjetas en la sección past events

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/upcoming_events.html">Upcoming Events</a>
+                                <a class="nav-link" href="./html/upcoming.html">Upcoming Events</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/past_events.html">Past Events</a>
+                                <a class="nav-link" href="./html/past.html">Past Events</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./html/contact.html">Contact</a>
