--- a/html/past.html
+++ b/html/past.html
@@ -27,13 +27,13 @@
                     <div class=" collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                         <ul class="navbar-nav justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./html/upcoming.html">Upcoming Events</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/past.html">Past Events</a>
+                                <a class="nav-link active" aria-current="page" href="#">Past Events</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./html/contact.html">Contact</a>
@@ -52,7 +52,7 @@
                     <a href="../html/upcoming.html"><i class="bi bi-arrow-left"></i></a>
                 </div>
                 <div class="d-flex align-items-center">
-                    <h2>Home</h2>
+                    <h2>Past Events</h2>
                 </div>
                 <div class="icon d-flex flex-row align-items-center">
                     <a href="../html/contact.html"><i class="bi bi-arrow-right"></i></a>
