--- a/html/past.html
+++ b/html/past.html
@@ -85,7 +85,16 @@
             </div>
 
         </main>
-        <footer></footer>
+        <footer>
+            <div class="container p d-flex flex-wrap m-0">
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-whatsapp"></i>
+            </div>
+            <div class="d-flex justify-content-end align-items-center px-2">
+                <h4>FE11-TM</h4>
+            </div>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
