--- a/html/past.html
+++ b/html/past.html
@@ -85,7 +85,7 @@
             </div>
 
         </main>
-        <footer>
+        <footer class="footer p-3">
             <div class="container p d-flex flex-wrap m-0">
                 <i class="bi bi-instagram"></i>
                 <i class="bi bi-facebook"></i>
