--- a/html/past.html
+++ b/html/past.html
@@ -30,16 +30,16 @@
                                 <a class="nav-link" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/upcoming.html">Upcoming Events</a>
+                                <a class="nav-link" href="./upcoming.html">Upcoming Events</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Past Events</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/contact.html">Contact</a>
+                                <a class="nav-link" href="./contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./html/stats.html">Stats</a>
+                                <a class="nav-link" href="./stats.html">Stats</a>
                             </li>
                         </ul>
                     </div>
